# skillgraph-adaptive-llm

./: README.md  sample_tester.py  simple_three_models.py
skillgraph_adaptive_env/: INTEGRATION_GUIDE.md  README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
skillgraph_adaptive_env/server/: Dockerfile  __init__.py  agent_manager.py  app.py  curriculum_engine.py  interaction_memory.py  model_runtime.py  role_classifier.py  scoring.py  skill_graph.py  skillgraph_adaptive_env_environment.py  task_library.py
skillgraph_adaptive_env/training/: run_hf_smoke_test.py  run_training.py  run_training_final_budget.py  run_training_hf_7iter.py  run_training_three_models.py  run_training_trl_grpo.py
skillgraph_adaptive_env/ui/: app.py
training/runs/final_run/: episode_logs.csv  episode_logs.jsonl  grpo_dataset.json  grpo_dataset_120.json  summary.json
training/runs/hf_7iter/: final_classification.json  iteration_report.jsonl
training/runs/hf_three_diff_models_10ep/: summary.json
training/runs/hf_three_models/: summary.json
training/runs/latest/: episode_logs.csv  episode_logs.jsonl  summary.json
